--- a/static/landing_page.css
+++ b/static/landing_page.css
@@ -1,1 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik+Wet+Paint&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+body{
+    font-family: 'Nunito', sans-serif !important;
+    font-weight: 200 !important;
+    background-color: #123332 !important;
+}
+
+/* Navbar */
+
+.logo{
+    width: 100px;
+    height: auto;
+}
+.navbar-toggler{
+    background-color: #f9eee7 !important;
+    margin-right: 10px;
+}
+.navbar-nav{
+    margin: 0 auto;
+    align-items: center;
+    gap: 97px;
+}
+.nav-link{
+    color:#f9eee7 !important;
+}
+.nav-link:hover{
+    color: #ffd9be !important;
+    transition: all 0.3s ease-in-out;
+}
+@media (max-width:991px){
+    #navbarSupportedContent{
+        background-color:  #1d4241!important;
+        padding: 20px;
+        margin-top: 0;
+        height: 83vh;
+        opacity: 0.7;
+    }
+}
