--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,32 @@
 {% block content %}
 {% load static %}
 
+<header>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+           <a href=""><img src="{% static "Images/logo.png" %}" class="logo"></img></a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+           </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href=""> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#"> About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#"> Therapists</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+            {% comment %} <button class="btn btn-outline">Register <span><i class="fa-solid fa-arrow-right fa-lg" style="color: #ffffff;"></i></span> </button> {% endcomment %}
+        </div>
+    </nav>
+</header>
 
 {% endblock %}
