--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
            <a href=""><img src="{% static "Images/logo.png" %}" class="logo"></img></a>
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,5 +29,23 @@
         </div>
     </nav>
 </header>
+<section class="hero">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-section">
+                <h1 class="hero-title">SOLARA</h1>
+                <p class="hero-paragraph">AI-powered support for brighter minds 
+                    and balanced lives.
+                </p>
+                <a href="#" class="btn btn-custom">
+                    Start Chatting
+                </a> 
+            </div>
+            <div class="col-md-6">
+                <img src="{% static "Images/brainandback.png" %}" alt="Brain Image" class=" img-fluid hero-image">
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
