--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,14 @@
 
 <header>
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-           <a href=""><img src="{% static "Images/logo.png" %}" class="logo"></img></a>
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="{% static "Images/logo.png" %}" class="logo"></img>
+            </a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href=""> Home</a>
@@ -30,21 +32,26 @@
     </nav>
 </header>
 <section class="hero">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-6 text-section">
-                <h1 class="hero-title">SOLARA</h1>
-                <p class="hero-paragraph">AI-powered support for brighter minds 
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-lg-6 text-section">
+                <h1 class="hero-title mb-4">SOLARA</h1>
+                <p class="hero-paragraph mb-4">AI-powered support for brighter minds 
                     and balanced lives.
                 </p>
                 <a href="#" class="btn btn-custom">
-                    Start Chatting
+                    Start Your Journey
                 </a> 
             </div>
-            <div class="col-md-6">
-                <img src="{% static "Images/brainandback.png" %}" alt="Brain Image" class=" img-fluid hero-image">
+            <div class="col-lg-6 mt-5 mt-lg-0 hero-image ">
+                <img src="{% static "Images/brain.png" %}" alt="Brain Image" class="img-fluid">
             </div>
         </div>
+    </div>
+    <div class="hero-background">
+        <div class="circle circle-1"></div>
+        <div class="circle circle-2"></div>
+        <div class="circle circle-3"></div>
     </div>
 </section>
 
