--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,17 @@
     <title>{% block title %}Solara{% endblock title %}</title>
 
     {%load static%}
-    <link rel="stylesheet" type="text/css" href = "{% static "landing_page.css" %}">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik+Wet+Paint&display=swap');
+
+       *{
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+       }
+    </style>
+    <link rel="stylesheet" href = "{% static "landing_page.css" %}">
+    <link rel="stylesheet" href = "{% static "authentication.css" %}">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
