--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 <p class="hero-paragraph mb-4">AI-powered support for brighter minds 
                     and balanced lives.
                 </p>
-                <a href="#" class="btn btn-custom">
+                <a href="/register" class="btn btn-custom">
                     Start Your Journey
                 </a> 
             </div>
