--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6 left-side">
+            <div class="col-md-6 col-12 left-side">
                 <div class="background-container">
                     <img src=" {% static "Images/Lux-7.jpg" %} " alt="backgroundimg" class="img-fluid background-image">
                 </div>
@@ -20,7 +20,7 @@
                         <p class="register-none">
                         Already have an account?
                         </p>                
-                        <button class="btn btn-custom sign-up">Sign In</button>                        
+                        <a href=""><button class="btn btn-custom sign-up">Sign In</button></a>                  
                     </div>
                     
                     <div class="bot-img-container">
@@ -29,27 +29,28 @@
                     
                 </div>
             </div>
-            <div class="col-md-6 right-side">
+            <div class="col-md-6 col-12 right-side">
                 <h2 class="register-heading">Sign Up</h2>
-                <form action="">
+                <form method= 'POST'>
+                    {% csrf_token %}
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" aria-describedby="usernameHelp">
+                        <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
                         <div id="usernameHelp" class="form-text">Pick a username that's as unique as you are 🌟</div>
                     </div>
                     <div class="mb-3">
                         <label for="Email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">Your email's safe with us, pinky promise! 🤞✨</div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" aria-describedby="passwordlHelp">
+                        <input type="password" class="form-control" id="password" name="password" aria-describedby="passwordlHelp">
                         <div id="passwordHelp" class="form-text">Choose something fire that'll keep the hackers shook 🔥🔒</div>
                     </div>
                     <div class="mb-3">
                         <label for="confirm_password" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirm_password" aria-describedby="confirmPasswordHelp">
+                        <input type="password" class="form-control" id="confirm_password"  name="confirm_password" aria-describedby="confirmPasswordHelp">
                         <div id="confirmPasswordHelp" class="form-text">Don’t let the passwords ghost each other 💫💻</div>
                     </div>
                     <button type="submit" class="btn btn-custom sign-up-submit">Submit</button>
