Create the login view and start the chatbot app

--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="content-overlay">
                     <div class="top-content">
-                        <a class="navbar-brand" href="">
+                        <a class="navbar-brand" href="{% url "index" %}">
                             <img src="{% static "Images/logo.png" %}" class="register-logo"></img>
                         </a>
                         <h2 class="register-heading">
@@ -20,7 +20,7 @@
                         <p class="register-none">
                         Already have an account?
                         </p>                
-                        <a href=""><button class="btn btn-custom sign-up">Sign In</button></a>                  
+                        <a href="login"><button class="btn btn-custom sign-up">Sign In</button></a>                  
                     </div>
                     
                     <div class="bot-img-container">
