redesign the chat header

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -12,7 +12,7 @@
                 <img src="{% static "Images/logo.png" %}" class="chatbot-logo"></img>
             </a>
             <div class="logout">
-                <a href="{% url "logout" %}"><i class="fa-solid fa-right-from-bracket fa-2xl" style="color: #f9eee7;"></i></a> 
+                <a href="{% url "logout" %}"><i class="fa-solid fa-right-from-bracket fa-xl" style="color: #f9eee7;"></i></a> 
             </div>        
         </div>
         <div class="card-body" id="chatbox">
