--- a/static/chatbot.css
+++ b/static/chatbot.css
@@ -7,17 +7,31 @@
 .user_greeting{
     color: #f9eee7;
     font-weight: 1000 !important;
-    font-size: 30px;
+    font-size: 24px;
+    margin: 0;
 }
 .chatbot-logo{
-    width: 100px;
+    width: 120px;
     height: auto;
+    transition: transform 0.3s ease;
+}
+.chatbot-logo:hover {
+    transform: scale(1.1);
+}
+.logout{
+    display: flex;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+.logout:hover{
+    transform: scale(1.1);
 }
 .card-header{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 20px;
+    padding: 10px 20px;
     border: none !important;
 }
 .card-body{
@@ -26,7 +40,7 @@
     overflow-y: auto;
     padding: 20px;
     margin: 0 auto;
-    height: auto;
+    height: 55vh;
     border-radius: 10px;
     box-shadow: inset 0 2px 6px 2px rgba(0, 0, 0, 0.3);
     padding: 20px;
