--- a/static/chatbot.css
+++ b/static/chatbot.css
@@ -1,9 +1,21 @@
-.card{
+.card {
     background-color: #1d4241 !important;
     border: none !important;
-    padding: 20px;
+    padding: 50px;
     margin-top: 20px;
+    border-radius: 10px !important;
+    /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5), -10px -10px 20px rgba(255, 255, 255, 0.05); */
 }
+
+.content-container {
+    position: relative;
+    z-index: 2; 
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .user_greeting{
     color: #f9eee7;
     font-weight: 700 !important;
@@ -11,7 +23,7 @@
     margin: 0;
 }
 .chatbot-logo{
-    width: 100px;
+    width: 70px;
     height: auto;
     transition: transform 0.3s ease;
 }
@@ -28,12 +40,37 @@
 }
 .card-header{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center !important;
     align-items: center;
     margin-top: 20px;
     padding: 10px 20px;
+    width: 80%;
+    margin: 0 auto;
     border: none !important;
+    background-color: #123332 !important;
+    /* box-shadow: inset 0 2px 6px 2px rgba(0, 0, 0, 0.3); */
+    margin-bottom: 10px !important;
+    position: relative;
+    border-radius: 10px !important;
 }
+.chat-headerbackground-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0; 
+    overflow: hidden; 
+    mix-blend-mode: hard-light;
+    border-radius: 10px !important;
+}
+.chat-headerbackground-container .background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+
+}
+
 .card-body{
     width:80%;
     border: none !important;
