--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#"> Therapists</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Contacts</a>
+                        <span class="coming-soon">Coming Soon</span>
                     </li>
                 </ul>
             </div>
@@ -54,7 +56,7 @@
         <div class="circle circle-3"></div>
     </div>
 </section>
-<section class="about-solara-section">
+<section class="about-solara-section" id="about">
     <div class="content-container about-solara" data-aos="fade-right" data-aos-duration="1000">
         <h2>About Solara</h2>
         <p>We understand that life as a student can be challenging, with academic pressures, social dynamics, and personal growth all happening at once. That's why Solara is here, offering a warm, supportive, and non-judgmental space where you can express your thoughts, explore your emotions, and find the guidance you need.</p>
