--- a/templates/index.html
+++ b/templates/index.html
@@ -57,22 +57,22 @@
     </div>
 </section>
 <section class="about-solara-section" id="about">
-    <div class="content-container about-solara" data-aos="fade-right" data-aos-duration="1000">
+    <div class="about-content-container about-solara" data-aos="fade-right" data-aos-duration="1000">
         <h2>About Solara</h2>
         <p>We understand that life as a student can be challenging, with academic pressures, social dynamics, and personal growth all happening at once. That's why Solara is here, offering a warm, supportive, and non-judgmental space where you can express your thoughts, explore your emotions, and find the guidance you need.</p>
     </div>
 
-    <div class="content-container who-solara" data-aos="fade-left" data-aos-duration="1000">
+    <div class="about-content-container who-solara" data-aos="fade-left" data-aos-duration="1000">
         <h2>Who is Solara</h2>
         <p>Solara is an advanced AI designed to listen, understand, and support you through life’s ups and downs. Think of Solara as a bright, guiding light—always available whenever you need a friend to talk to. Whether you’re feeling stressed, anxious, or just need someone to listen, Solara is here, day or night, ready to help you find balance and clarity.</p>
     </div>
 
-    <div class="content-container why-solara" data-aos="fade-right" data-aos-duration="1000">
+    <div class="about-content-container why-solara" data-aos="fade-right" data-aos-duration="1000">
         <h2>Why Solara</h2>
         <p>Our mission is simple: to provide a safe, accessible, and friendly environment for students to explore their mental health. Solara blends cutting-edge AI technology with a compassionate approach, ensuring that you always have someone to turn to, no matter what.</p>
     </div>
 
-    <div class="content-container how-solara" data-aos="fade-left" data-aos-duration="1000">
+    <div class="about-content-container how-solara" data-aos="fade-left" data-aos-duration="1000">
         <h2>How Does Solara Work</h2>
         <p>Solara uses advanced algorithms to understand and respond to your messages. 
             While Solara doesn’t replace professional counselling, it’s a great starting point
@@ -80,7 +80,7 @@
             And the best part? Solara is here 24/7, always ready to lend a virtual ear.</p>
     </div>
 
-    <div class="content-container privacy-solara" data-aos="fade-right" data-aos-duration="1000">
+    <div class="about-content-container privacy-solara" data-aos="fade-right" data-aos-duration="1000">
         <h2>Your Privacy Matters</h2>
         <p>We know how important privacy is, especially when it comes to your 
             mental health. Solara is designed with your confidentiality in mind. 
