--- a/static/landing_page.css
+++ b/static/landing_page.css
@@ -320,13 +320,11 @@ body{
 /* Footer */
 .about-footer {
     text-align: center;
-    background-image: url('Images/blob.png');
-    background-size: cover;
     padding: 50px 30px;
     border-radius: 15px;
-    width: 100%;
+    width: 70%;
     margin: 0 auto;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    /* box-shadow: inset 0 8px 16px rgba(0, 0, 0, 0.2); */
     clear: both;
 }
 
