--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to right, rgba(18, 51, 50, 1) 0%, rgba(34, 85, 83, 1) 100%);
+            background:#123332 ;
             display: flex;
             justify-content: center;
             align-items: center;
