--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
                         <p class="register-none">
                         Don't have an account?
                         </p>                
-                        <a href="login"><button class="btn btn-custom sign-up">Sign Up</button></a>                  
+                        <a href="register"><button class="btn btn-custom sign-up">Sign Up</button></a>                  
                     </div>
                     
                     <div class="bot-img-container">
